# tree-sitter-lint-plugin-rustfmt

./: Cargo.toml
src/: lib.rs
