[package]
name = "tree-sitter-lint-plugin-rustfmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tracing = "0.1.37"
tree-sitter-lint = { path = "../tree-sitter-lint" }

[patch.crates-io]
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter", rev = "c16b90d" }
